# hnt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build_release.sh  install.ps1  install.sh  package-lock.json
src/: main.rs
src/ai/: call_ai.rs  commit.rs  gemini.rs  handler.rs  mod.rs  open_router.rs  update_ai_config.rs  update_api_key.rs
src/games/: guess.rs  guess_parser.rs  mod.rs
src/generator/: axum.rs  express.rs  fastapi.rs  gin.rs  mod.rs  react.rs  vanilla.rs
src/git/: push.rs
src/init/: create.rs  fs_cleanup.rs  fs_ops.rs  helper.rs  mod.rs  project_summary.rs  prompts.rs  save_config.rs  scaffold.rs  validate.rs  wizard.rs
src/templates/: react.rs
src/utils/: config.rs  git_run.rs  loader.rs  mod.rs  pkg_manager.rs
templates/axum/: .gitignore  Cargo.toml
templates/axum/src/: main.rs
templates/express/: package.json
templates/express-ts/: _gitignore  package-lock.json  package.json  tsconfig.json
templates/express-ts/src/: index.ts
templates/express/src/: index.js
templates/fastapi/: _gitignore  main.py
templates/gin/: _gitignore  go.mod
templates/gin/cmd/server/: main.go
templates/react/: package-lock.json  package.json
templates/react-ts/base/: package-lock.json  package.json
templates/react-ts/tailwind/: index.html  package-lock.json  package.json  tsconfig.app.json
templates/react/base/: index.html  package-lock.json  package.json
templates/react/src/: App.jsx
templates/react/tailwind/: package-lock.json  package.json
templates/vanilla-ts/base/: index.html  package-lock.json  package.json  tsconfig.json
(+42 files in other folders)
