[package]
name = "hnt"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
cliclack = "0.3.6"
colored = "3.0.0"
dirs = "6.0.0"
inquire = "0.7.5"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
